Fix mobile missing padding.

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -139,7 +139,7 @@ nav, .content, footer {
 
 // Navigation
 nav {
-  width: 100%;
+  width: calc(100% - 64px);
   max-width: 720px - 64px;
   margin: 0 auto;
   display: flex;
