--- a/src/scss/post.scss
+++ b/src/scss/post.scss
@@ -2,7 +2,7 @@
   page-break-before: always;
   padding-bottom: 1em;
   position: relative;
-  width: 100%;
+  width: calc(100% - 64px);
   max-width: 720px - 64px;
   margin: 0 auto;
 
