--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -1,5 +1,5 @@
 .posts {
-  width: 100%;
+  width: calc(100% - 64px);
   max-width: 720px - 64px;
   margin: 0 auto;
 
